--- a/.travis.yml
+++ b/.travis.yml
@@ -34,7 +34,7 @@ env:
 deploy:
   provider: releases
   api_key: G5hyOedaKXMpgDyUgqH8HA
-  file: testbulwark-qt
+  file: bulwark-qt
   skip_cleanup: true
   on:
     tags: true
