--- a/.travis.yml
+++ b/.travis.yml
@@ -90,6 +90,13 @@ after_script:
     -r $BASE_OUTDIR server" || echo "upload failed"); fi
 - echo $TRAVIS_COMMIT_RANGE
 - echo $TRAVIS_COMMIT_LOG
+before_deploy:
+- cd ..
+- git config --local user.name "SHTDJ"
+- git config --local user.email "niklas.nieberding@yahoo.de"
+- git tag "bulwark-testnet-1.2.4.0-$(date +'%Y%m%d%H%M%S')-$(git log --format=%h -1)"
+- tar -zvcf bulwark-testnet-1.2.4.0-$HOST.tar.gz -C $OUTDIR bin/
+- echo `pwd`
 deploy:
   provider: releases
   file_glob: true
