--- a/src/Makefile.qt.include
+++ b/src/Makefile.qt.include
@@ -182,8 +182,8 @@ BITCOIN_QT_H = \
   qt/winshutdownmonitor.h
 
 RES_FONTS = \
-  qt/res/fonts/SourceSansPro-Regular.ttf
-  qt/res/fonts/SourceSansPro-Bold.ttf
+  qt/res/fonts/SourceSansPro-Regular.ttf \
+  qt/res/fonts/SourceSansPro-Bold.ttf \
 
 RES_ICONS = \
   qt/res/icons/history_m.png \
