--- a/src/Makefile.qt.include
+++ b/src/Makefile.qt.include
@@ -196,18 +196,18 @@ BITCOIN_QT_H = \
   qt/walletmodeltransaction.h \
   qt/walletview.h \
   qt/winshutdownmonitor.h \
-  qt/lib/qtmaterialcheckable.h \
-  qt/lib/qtmaterialcheckable_internal.h \
-  qt/lib/qtmaterialcheckable_p.h \
-  qt/lib/qtmaterialoverlaywidget.h \
-  qt/lib/qtmaterialripple.h \
-  qt/lib/qtmaterialrippleoverlay.h \
-  qt/lib/qtmaterialstatetransition.h \
-  qt/lib/qtmaterialstatetransitionevent.h \
-  qt/lib/qtmaterialstyle.h \
-  qt/lib/qtmaterialstyle_p.h \
-  qt/lib/qtmaterialtheme.h \
-  qt/lib/qtmaterialtheme_p.h
+  qt/qtmaterialcheckable.h \
+  qt/qtmaterialcheckable_internal.h \
+  qt/qtmaterialcheckable_p.h \
+  qt/qtmaterialoverlaywidget.h \
+  qt/qtmaterialripple.h \
+  qt/qtmaterialrippleoverlay.h \
+  qt/qtmaterialstatetransition.h \
+  qt/qtmaterialstatetransitionevent.h \
+  qt/qtmaterialstyle.h \
+  qt/qtmaterialstyle_p.h \
+  qt/qtmaterialtheme.h \
+  qt/qtmaterialtheme_p.h
 
 RES_ICONS = \
   qt/res/icons/history_m.png \
@@ -303,14 +303,14 @@ BITCOIN_QT_CPP = \
   qt/trafficgraphwidget.cpp \
   qt/utilitydialog.cpp \
   qt/winshutdownmonitor.cpp \
-  qt/lib/qtmaterialcheckable.cpp \
-  qt/lib/qtmaterialcheckable_internal.cpp \
-  qt/lib/qtmaterialoverlaywidget.cpp \
-  qt/lib/qtmaterialripple.cpp \
-  qt/lib/qtmaterialrippleoverlay.cpp \
-  qt/lib/qtmaterialstatetransition.cpp \
-  qt/lib/qtmaterialstyle.cpp \
-  qt/lib/qtmaterialtheme.cpp
+  qt/qtmaterialcheckable.cpp \
+  qt/qtmaterialcheckable_internal.cpp \
+  qt/qtmaterialoverlaywidget.cpp \
+  qt/qtmaterialripple.cpp \
+  qt/qtmaterialrippleoverlay.cpp \
+  qt/qtmaterialstatetransition.cpp \
+  qt/qtmaterialstyle.cpp \
+  qt/qtmaterialtheme.cpp
 
 if ENABLE_WALLET
 BITCOIN_QT_CPP += \
